--- a/views/admin/admin-books.ejs
+++ b/views/admin/admin-books.ejs
@@ -12,6 +12,7 @@
                 <a href="/admin/edit-book/<%= book._id %>" class="btn">Edit</a>
                 <form action="/admin/delete-book" method="post">
                     <input type="hidden" value="<%= book._id %>" name="bookId">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button class="btn" type="submit" style="background: red">Delete</button>
                 </form>
             </div>
