--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -20,6 +20,7 @@
             <label for="conf_password">Confirm password</label>
             <input type="password" id="conf_password" name="conf_password" value="<%= user.conf_password %>">
         </div>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button class="btn" type="submit">Create account</button>
     </form>
 </div>
